image aligning fix for Mozilla and IE

--- a/css/master.css
+++ b/css/master.css
@@ -594,15 +594,10 @@ img, object, embed, video {
 }
 
 .image-container{
-	display: inline-block;
-	position: relative;
-	height: 100%;
-	width: 100%;
+	text-align: right; 
+	vertical-align: bottom;
 }
 .picture-bottom{
-	position: absolute;
-	bottom: 0;
 	right: 0;
 	width: 100%;
-	max-height:100%
 }
